[workspace]
resolver = "2"
members = [
  "crates/parser",
  "crates/parser-wasm",
  "crates/cli",
  "xtask",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/quizfold/quizfold"
rust-version = "1.76"

[workspace.dependencies]
quizfold-parser = { path = "crates/parser" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
thiserror = "1"
wasm-bindgen = "0.2"
