[package]
name = "quizfold-parser-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
quizfold-parser.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
