[package]
name = "quizfold-parser-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "build-wasm"
path = "bin/build-wasm.rs"
required-features = ["build-support"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
build-support = ["dep:wasm-build-support", "dep:anyhow"]

[dependencies]
quizfold-parser = { workspace = true, features = ["tsify"] }
serde.workspace = true
serde-wasm-bindgen = "0.6"
tsify-next.workspace = true
wasm-bindgen = "0.2"
wasm-build-support = { path = "../../local/wasm-build-support", optional = true }
anyhow = { workspace = true, optional = true }

[build-dependencies]
quizfold-parser = { workspace = true }
